--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "n8n-nodes-<...>",
+	"name": "n8n-nodes-apexhome",
 	"version": "0.1.0",
 	"description": "",
 	"license": "MIT",
@@ -13,7 +13,7 @@
 	},
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/<...>/n8n-nodes-<...>.git"
+		"url": "https://github.com/Sanjeet990/n8n-nodes-apexhome.git"
 	},
 	"scripts": {
 		"build": "n8n-node build",
@@ -31,10 +31,12 @@
 		"n8nNodesApiVersion": 1,
 		"strict": true,
 		"credentials": [
+			"dist/credentials/ApexHomeApi.credentials.js",
 			"dist/credentials/GithubIssuesApi.credentials.js",
 			"dist/credentials/GithubIssuesOAuth2Api.credentials.js"
 		],
 		"nodes": [
+			"dist/nodes/ApexHome/ApexHome.node.js",
 			"dist/nodes/GithubIssues/GithubIssues.node.js",
 			"dist/nodes/Example/Example.node.js"
 		]
