feat: Add Apex Home SVG icon and update ApexHome node
- Added new SVG icon for Apex Home (`apexhome.svg`).
- Removed old GitHub SVG icons (`github.dark.svg` and `github.svg`).
- Updated `ApexHome` class name to `Apexhome` for consistency.
- Enhanced `ApexHome` node with new properties and request body types.
- Updated `ApexHomeTrigger` to directly import events data from JSON.
- Improved webhook handling and output data structure in `ApexHomeTrigger`.
- Updated package.json with a description and author information.

--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
 	"name": "n8n-nodes-apexhome",
 	"version": "0.1.0",
-	"description": "",
+	"description": "The Apex Home node for n8n allows seamless integration with Apex Home dashboard enabling users to automate and control their instance of Apex Home directly from n8n workflows.",
 	"license": "MIT",
 	"homepage": "",
 	"keywords": [
 		"n8n-community-node-package"
 	],
 	"author": {
-		"name": "",
-		"email": ""
+		"name": "Sanjeet990",
+		"email": "sanjeet.pathak990@gmail.com"
 	},
 	"repository": {
 		"type": "git",
@@ -34,7 +34,7 @@
 			"dist/credentials/ApexHomeApi.credentials.js"
 		],
 		"nodes": [
-			"dist/nodes/ApexHome/ApexHome.node.js",
+			"dist/nodes/ApexHome/Apexhome.node.js",
 			"dist/nodes/ApexHome/ApexHomeTrigger.node.js"
 		]
 	},
