--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "n8n-nodes-apexhome",
-	"version": "0.1.0",
+	"version": "0.0.1-alpha",
 	"description": "The Apex Home node for n8n allows seamless integration with Apex Home dashboard enabling users to automate and control their instance of Apex Home directly from n8n workflows.",
 	"license": "MIT",
 	"homepage": "",
